feat: apply JPA to entities, repositories, services and refactor DTO structure